# swagger2markdown

./: .gitignore  .travis.yml  README.rst  pyproject.toml  setup.py  swagger.json  swagger.md.j2  swagger2markdown.py
