[tool.poetry]
name = "swagger2markdown"
version = "0.1.10"
description = "Converter from Swagger JSON to Markdown."
authors = ["Constantine Molchanov <moigagoo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"
Jinja2 = "^2.10"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
swagger2markdown = "swagger2markdown:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
